# agent-os

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  architecture.excalidraw  docker-compose.yml  mix.exs  pyproject.toml
.claude/: settings.json
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  agent-primitive-matrix.md  phase-08-spec-prompts.md  phase-09-spec-prompts.md  phase-10-priorities-coach-roadmap.md  phase-10-spec-prompts.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.specify/: feature.json
agents/: generated.Dockerfile
config/: config.exs
data/: admin_alerts.md  bookmarks.json  run_log.md  spend_ledger.term
docs/: Elicitor Design System.html  agent-os-design.html  agent-os-design.md  agent_os.html  agent_os.md  build_agent_os_map.sh  build_agent_os_map_v3_delta.sh  build_agent_os_map_v3_review_modes_delta.sh  plan.md  substrate-containerization-analysis.md  threat-model-agent-isolation.md
lib/: agent_os.ex
manifests/: an_agent_that_checks_the_local_time_on_its_server_and_sends_it_as_french_words_to_the_user_via_discord.md  discovery.md  get_the_local_time_on_startup_translate_it_into_french_words_and_send_it_as_a_message_to_the_configured_discord_channel.md  when_the_agent_starts_get_the_local_time_on_the_agent_s_server_then_send_a_message_to_the_harness_configured_discord_channel_with_the_time_expressed_in_french_words.md
priv/: port_wrapper.sh
priv/static/: app.css  (+1 more)
scripts/: agent_image.sh
test/: agent_os_test.exs  test_helper.exs
(+571 files in other folders)
