[project]
name = "agent-os"
version = "0.1.0"
description = "Agent OS — Python agent workloads (the discovery agent runs across the BEAM port boundary)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13",
    "google-genai>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["agents"]
pythonpath = ["."]

